# Audiora

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: aud.yml  main.yml  rust.yml  rust.yml.save
Audiora/: Cargo.toml  style.css
Audiora/src/: main.rs
src/: main.rs
