[package]
name = "Audiora"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
docx-rs = "0.4.18-rc19"
pdf-extract = "0.7.12"
# Pure Rust TTS
tts-rs = { version = "0.6.0", default-features = false }
# Pure Rust audio
cpal = { version = "0.15", default-features = false, features = ["jack"] }  # Use JACK backend
symphonia = { version = "0.5", default-features = false, features = ["mp3"] }
minimp3 = "0.5.1"
tokio = { version = "1.42.0", features = ["full"] }

[build-dependencies]
prost-build = "0.11"  # Helps avoid some sys crates